src/pages/in-the-rough/InTheRough.module.scss
@use "../../styles//global-utils.module.scss" as *;

.inTheRough {
  display: flex;
  align-items: center;
  height: fit-content;
  justify-content: center;
  flex-direction: column;

  @media (min-width: 500px) {
    height: 100%;
  }
}

.contentContainer {
  padding: $global-padding;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 85px;
  max-width: 800px;
  font-size: 20px;
  letter-spacing: 1px;

  p {
    margin-bottom: 30px;
  }

  .button {
    text-decoration: none;
    border: 1px solid white;
    padding: 10px;
  }
}

.timePlaceContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 30px;

  a {
    text-decoration: none;
    border-bottom: 1px solid white;
  }
}

